data/derived/fa15/progs/unify/prog4036.ml.out
Characters 29-43:
  let fixpoint (f,b) = wwhile ((b, (f b) = b), b);;
                               ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
